# pytaboola

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
pytaboola/: __init__.py  client.py  errors.py
pytaboola/services/: __init__.py  base.py  report.py  resource.py  service.py
pytaboola/utils/: __init__.py
