[tool.poetry]
name = "pytaboola"
version = "0.1.3"
description = "Python client for Taboola API"
authors = [
    "Antoine Francais <antoine.francais@gmail.com>",
    "François Schmidts <francois@schmidts.fr>"
]
maintainers = ["Dolead <it@dolead.com>"]
license = "MIT"
keywords = ['taboola', 'api']
classifiers = [
          "Programming Language :: Python :: 3",
          "Topic :: Software Development :: Libraries :: Python Modules",
          "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
